--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -11,19 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 1,
    "id": "194d2201-1ac2-4084-adef-e3acf3a9bd4e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# importing our libraries that are to be used\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 2,
    "id": "5f75fa47-5f5c-4ca8-8c02-b7fadc3d3b2e",
    "metadata": {},
    "outputs": [],
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 3,
    "id": "cf6cc7de-c773-41ed-816b-6e7d963e0ae4",
    "metadata": {},
    "outputs": [
@@ -408,7 +410,7 @@
        "[145460 rows x 23 columns]"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 4,
    "id": "8cf21a92-78e5-41ea-a30b-9c257491b44e",
    "metadata": {},
    "outputs": [],
@@ -432,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 5,
    "id": "cc26a080-af61-4138-ba5a-fc14341c5a33",
    "metadata": {},
    "outputs": [
@@ -806,7 +808,7 @@
        "[56420 rows x 23 columns]"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 6,
    "id": "434abee2-2333-48e3-ba9f-3f8ef9352b0e",
    "metadata": {},
    "outputs": [
@@ -1191,19 +1193,20 @@
        "[56420 rows x 22 columns]"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# drop the date column as it is useless\n",
     "df = df.drop([\"Date\"], axis=1)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 7,
    "id": "df5b6cd0-47ca-48e2-9973-189cb21bd988",
    "metadata": {},
    "outputs": [
@@ -1577,19 +1580,20 @@
        "[56420 rows x 21 columns]"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# dropping the location as it has a wide variety of values which results in useless features and may lower model performance\n",
     "df = df.drop([\"Location\"], axis=1)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 8,
    "id": "48a38516-e2fe-46a2-a69f-96ab440cb9e4",
    "metadata": {},
    "outputs": [
@@ -1951,19 +1955,20 @@
        "[56420 rows x 20 columns]"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# dropping the wind gust direction as it does not matter\n",
     "df = df.drop([\"WindGustDir\"], axis=1)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 9,
    "id": "ced84dea-4621-48fa-9335-131fe1892468",
    "metadata": {},
    "outputs": [
@@ -2313,7 +2318,7 @@
        "[56420 rows x 19 columns]"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2325,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 10,
    "id": "af85676c-1d78-42dc-96d4-f10762523515",
    "metadata": {},
    "outputs": [
@@ -2663,7 +2668,7 @@
        "[56420 rows x 18 columns]"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2675,7 +2680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 11,
    "id": "18f4b4ec-7062-4df4-acfc-2bcad24f3884",
    "metadata": {},
    "outputs": [
@@ -2976,7 +2981,7 @@
        "[56420 rows x 16 columns]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2989,7 +2994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 12,
    "id": "f44f7ccb-d0dd-4580-8878-c73296fcb1c0",
    "metadata": {},
    "outputs": [
@@ -3266,7 +3271,7 @@
        "[56420 rows x 14 columns]"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3279,18 +3284,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 13,
    "id": "ccbe373c-0758-4f22-b06d-27c3dd86d539",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# mapping all Yes values to 1 and all No values to 0\n",
     "df['RainToday'] = df['RainToday'].map({'Yes': 1, 'No': 0})\n",
     "df['RainTomorrow'] = df['RainTomorrow'].map({'Yes': 1, 'No': 0})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 14,
    "id": "303d7cac-df35-4fe6-9fb6-f344b475f360",
    "metadata": {},
    "outputs": [
@@ -3567,7 +3573,7 @@
        "[56420 rows x 14 columns]"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3578,13 +3584,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1a481456-a1c6-4380-8c0c-c1c2e6c129e4",
+   "execution_count": 37,
+   "id": "eab7bbfa-1c9f-48c3-bc45-cccd43ff6098",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"RainToday\"]"
+    "# X.shape should be (N, M) where M >= 1\n",
+    "X = df[['MinTemp', 'MaxTemp', 'Rainfall','Evaporation', 'Sunshine', 'WindGustSpeed', 'Humidity9am', 'Humidity3pm', 'Cloud9am', 'Cloud3pm', 'Temp9am', 'Temp3pm', 'RainToday']]\n",
+    "# y.shape should be (N, 1)\n",
+    "y = df['RainTomorrow']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "bf9ceaa0-1066-463a-b455-4bbf693a6227",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(56420, 13)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "4e839524-d528-454b-811d-520ccd8c471d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(56420,)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "daf16996-ef0b-48f1-9188-5fcf564b4fb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "bc379d44-2f71-4c57-95be-986620b111a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logisticRegr = LogisticRegression(solver='lbfgs', max_iter=400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "4c1e6d74-0b1b-4032-858c-c5f4fae3530c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-2 {color: black;background-color: white;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(max_iter=400)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(max_iter=400)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LogisticRegression(max_iter=400)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logisticRegr.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "b240a4d4-f74c-472a-b257-9fb2383575e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = logisticRegr.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "521ebaf6-6e9b-487e-8ac6-e93c24b57a1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "84.98845265588915%\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = logisticRegr.score(X_test, y_test)\n",
+    "print(str(score*100) + \"%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae9f35a3-580d-41b3-9adb-07281b25ab78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Minimum Temprature? 1\n",
+      "Maximum Temprature? 1\n",
+      "Rainfall? 1\n",
+      "Evaporation? 1\n",
+      "Sun Shine? 1\n",
+      "Wind Gust Speed? 1\n",
+      "Humidity at 9AM? 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "minTemp = input(\"Minimum Temprature?\")\n",
+    "maxTemp = input(\"Maximum Temprature?\")\n",
+    "rainFall = input(\"Rainfall?\")\n",
+    "evaporation = input(\"Evaporation?\")\n",
+    "sunShine = input(\"Sun Shine?\")\n",
+    "WindGusSpeed = input(\"Wind Gust Speed?\")\n",
+    "Humidity9am = input(\"Humidity at 9AM?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05bfece7-e921-4d49-9af0-c3a90cd25f75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
