Trained Model, Added Prediction Input

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -3584,7 +3584,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
+   "id": "4636e7a6-7c93-454d-bfec-d3d29757f5f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('cleanedData.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "eab7bbfa-1c9f-48c3-bc45-cccd43ff6098",
    "metadata": {},
    "outputs": [],
@@ -3597,7 +3607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "bf9ceaa0-1066-463a-b455-4bbf693a6227",
    "metadata": {},
    "outputs": [
@@ -3607,7 +3617,7 @@
        "(56420, 13)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3618,7 +3628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "4e839524-d528-454b-811d-520ccd8c471d",
    "metadata": {},
    "outputs": [
@@ -3628,7 +3638,7 @@
        "(56420,)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3639,17 +3649,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "daf16996-ef0b-48f1-9188-5fcf564b4fb3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X.values, y.values, test_size=0.33, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "id": "bc379d44-2f71-4c57-95be-986620b111a1",
    "metadata": {},
    "outputs": [],
@@ -3659,20 +3669,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "id": "4c1e6d74-0b1b-4032-858c-c5f4fae3530c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-2 {color: black;background-color: white;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(max_iter=400)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(max_iter=400)</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(max_iter=400)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(max_iter=400)</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "LogisticRegression(max_iter=400)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3683,7 +3693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "id": "b240a4d4-f74c-472a-b257-9fb2383575e2",
    "metadata": {},
    "outputs": [],
@@ -3693,7 +3703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "id": "521ebaf6-6e9b-487e-8ac6-e93c24b57a1f",
    "metadata": {},
    "outputs": [
@@ -3712,7 +3722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "ae9f35a3-580d-41b3-9adb-07281b25ab78",
    "metadata": {},
    "outputs": [
@@ -3720,30 +3730,104 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Minimum Temprature? 1\n",
-      "Maximum Temprature? 1\n",
-      "Rainfall? 1\n",
-      "Evaporation? 1\n",
-      "Sun Shine? 1\n",
-      "Wind Gust Speed? 1\n",
-      "Humidity at 9AM? 1\n"
+      "Minimum Temprature? 5\n",
+      "Maximum Temprature? 10\n",
+      "Rainfall? 50\n",
+      "Evaporation? 10\n",
+      "Sun Shine? 3\n",
+      "Wind Gust Speed? 40\n",
+      "Humidity at 9AM? 3\n",
+      "Humidity at 3PM? 6\n",
+      "Cloud Density at 9AM? 30\n",
+      "Cloud Density at 3PM? 30\n",
+      "Temprature at 9AM? 2\n",
+      "Temprature at 3PM? 7\n",
+      "Was there rain today? 0 for no, 1 for yes. 1\n"
      ]
     }
    ],
    "source": [
-    "minTemp = input(\"Minimum Temprature?\")\n",
-    "maxTemp = input(\"Maximum Temprature?\")\n",
-    "rainFall = input(\"Rainfall?\")\n",
-    "evaporation = input(\"Evaporation?\")\n",
-    "sunShine = input(\"Sun Shine?\")\n",
-    "WindGusSpeed = input(\"Wind Gust Speed?\")\n",
-    "Humidity9am = input(\"Humidity at 9AM?\")"
+    "minTemp = float(input(\"Minimum Temprature?\"))\n",
+    "maxTemp = float(input(\"Maximum Temprature?\"))\n",
+    "rainFall = float(input(\"Rainfall?\"))\n",
+    "evaporation = float(input(\"Evaporation?\"))\n",
+    "sunShine = float(input(\"Sun Shine?\"))\n",
+    "WindGusSpeed = float(input(\"Wind Gust Speed?\"))\n",
+    "Humidity9am = float(input(\"Humidity at 9AM?\"))\n",
+    "Humidity3pm = float(input(\"Humidity at 3PM?\"))\n",
+    "Cloud9am = float(input(\"Cloud Density at 9AM?\"))\n",
+    "Cloud3pm = float(input(\"Cloud Density at 3PM?\"))\n",
+    "Temp9am = float(input(\"Temprature at 9AM?\"))\n",
+    "Temp3pm = float(input(\"Temprature at 3PM?\"))\n",
+    "RainToday = float(input(\"Was there rain today? 0 for no, 1 for yes.\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "3b24dcca-441a-4276-acaf-1f9cef190c77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A test input that shows that it will rain tomorrow!\n",
+    "#inputarr = [21.4,37.5,18,9.8,10.9,94,89,50,7,6,26.2,34.1,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "05bfece7-e921-4d49-9af0-c3a90cd25f75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputarr = [minTemp,maxTemp,rainFall,evaporation,sunShine,WindGusSpeed,Humidity9am,Humidity3pm,Cloud9am,Cloud3pm,Temp9am,Temp3pm,RainToday]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "88f585ef-1134-45aa-9108-500750fa0cf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputarr = np.array(inputarr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "9e2ed072-4eba-4f8f-a338-edba5d478304",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict = logisticRegr.predict(inputarr.reshape(1,-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "3d1922fe-c257-4eb0-be66-10b86b4eeba3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It will rain tomorrow!\n"
+     ]
+    }
+   ],
+   "source": [
+    "if(predict[0] == 0):\n",
+    "    print(\"It will not rain tomorrow!\")\n",
+    "else:\n",
+    "    print(\"It will rain tomorrow!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05bfece7-e921-4d49-9af0-c3a90cd25f75",
+   "id": "b578266c-70ea-4944-a4bc-c50f7158923f",
    "metadata": {},
    "outputs": [],
    "source": []
